--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         <div><span>Then my total is Rs </span><span id="finalNoteCount"></span></div>
         <br>
         <div>Problem 5</div>
-        <div>Your problem 5 html goes here</div>
+        <div><span>Given an advertising text:</span></div>
+        <div><span id="hindi"></span></div>
+        <div><span id="urdu"></span></div>
+        <div><span id="english"></span></div>
+        <div><span>When I correct the text</span></div>
+        <div><span>Then the result should be:</span></div>
+        <div><span id="finalAd"></span></div>
+        <div><span>count: </span><span id="count"></span></div>
+
     </body>
 </html>
